--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fontsource/onest": "^5.2.11",
     "@tailwindcss/vite": "^4.1.18",
     "astro": "^5.16.6",
-    "tailwindcss": "^4.1.18"
+    "tailwindcss": "^4.1.18",
+    "yargs-parser": "^21.0.1"
   }
 }
